--- a/schedule.html
+++ b/schedule.html
@@ -14,8 +14,8 @@
 
 <title>Schedule, Spring 2022</title>
 
-<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -267,6 +267,60 @@ $(document).ready(function () {
     <li>
       <a href="LECTURE3.html">Thomas Robert Malthus</a>
     </li>
+    <li>
+      <a href="LECTURE4.html">Population Regulation</a>
+    </li>
+    <li>
+      <a href="LECTURE5.html">Passenger Pigeon</a>
+    </li>
+    <li>
+      <a href="LECTURE6.html">Age-structured populations</a>
+    </li>
+    <li>
+      <a href="LECTURE7.html">Matrix population models</a>
+    </li>
+    <li>
+      <a href="LECTURE8.html">Stochastic population models</a>
+    </li>
+    <li>
+      <a href="LECTURE9.html">Small population paradigm</a>
+    </li>
+    <li>
+      <a href="LECTURE10.html">Individual-based models</a>
+    </li>
+    <li>
+      <a href="LECTURE11.html">Declining population paradigm</a>
+    </li>
+    <li>
+      <a href="LECTURE12.html">Population Viability Analysis</a>
+    </li>
+    <li>
+      <a href="LECTURE13.html">Metapopulations</a>
+    </li>
+    <li>
+      <a href="LECTURE14.html">PVA example: pdogs and ferrets</a>
+    </li>
+    <li>
+      <a href="LECTURE15.html">Parameter estimation</a>
+    </li>
+    <li>
+      <a href="LECTURE16.html">Species interactions: competition</a>
+    </li>
+    <li>
+      <a href="LECTURE17.html">Species interactions: prey-predator</a>
+    </li>
+    <li>
+      <a href="LECTURE18.html">Wrap-up</a>
+    </li>
+    <li>
+      <a href="PVA1_421.html">NRES421: PVA basics</a>
+    </li>
+    <li>
+      <a href="PVA2_421.html">NRES421: grizzly PVA</a>
+    </li>
+    <li>
+      <a href="PVA3_421.html">NRES421: loggerhead PVA</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -280,7 +334,28 @@ $(document).ready(function () {
       <a href="LAB1.html">Lab 1: exponential growth</a>
     </li>
     <li>
+      <a href="LAB2.html">Lab 2: logistic growth</a>
+    </li>
+    <li>
+      <a href="LAB3.html">Lab 3: age-structured population growth</a>
+    </li>
+    <li>
+      <a href="LAB4.html">Lab 4: matrix population models</a>
+    </li>
+    <li>
+      <a href="LAB5.html">Lab 5: stochasticity and uncertainty</a>
+    </li>
+    <li>
+      <a href="LAB6.html">Lab 6: metapopulations</a>
+    </li>
+    <li>
+      <a href="LAB7.html">Lab 7: capture-mark-recapture</a>
+    </li>
+    <li>
       <a href="FINAL_PROJECTS.html">Final Projects!</a>
+    </li>
+    <li>
+      <a href="EXTRA_CREDIT.html">Extra Credit!</a>
     </li>
   </ul>
 </li>
@@ -306,12 +381,12 @@ $(document).ready(function () {
 
 
 <p>Please check for updates frequently!</p>
-<table>
+<table style="width:100%;">
 <colgroup>
 <col width="4%" />
-<col width="6%" />
-<col width="59%" />
-<col width="29%" />
+<col width="5%" />
+<col width="61%" />
+<col width="27%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -373,8 +448,8 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="left"></td>
 <td align="left">2/4/2022</td>
-<td align="left">LAB 2: Density-dependent populations in InsightMaker; maximum sustainable yield (MSY) and more</td>
-<td align="left">BCTD Chapter 2 (optional)</td>
+<td align="left">LAB 2: Density-dependent populations in InsightMaker; maximum sustainable yield (MSY) and more (lab 1 due)</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 4</td>
@@ -385,13 +460,13 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="left"></td>
 <td align="left">2/9/2022</td>
-<td align="left">LECTURE: Age-structured populations</td>
+<td align="left">LECTURE: Age-structured populations (instructor away, no class meeting)</td>
 <td align="left">Gotelli Chapter 3</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">2/11/2022</td>
-<td align="left">LAB 3: Age-structured populations in Excel and InsightMaker</td>
+<td align="left">LAB 3: Age-structured populations in Excel and InsightMaker (lab 2 due)</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
@@ -403,13 +478,13 @@ $(document).ready(function () {
 <tr class="even">
 <td align="left"></td>
 <td align="left">2/16/2022</td>
-<td align="left">LECTURE: Matrix population models</td>
+<td align="left">LECTURE: Matrix population models (get in project groups)</td>
 <td align="left">Gotelli Chapter 3</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">2/18/2022</td>
-<td align="left">Work on PVA proposals</td>
+<td align="left">LAB 4: Matrix population models in R and InsightMaker (lab 3 due)</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
@@ -421,13 +496,13 @@ $(document).ready(function () {
 <tr class="odd">
 <td align="left"></td>
 <td align="left">2/23/2022</td>
-<td align="left">LECTURE: Matrix population models</td>
-<td align="left">Gotelli Chapter 3</td>
+<td align="left">LECTURE: PVA, final projects</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">2/25/2022</td>
-<td align="left">LAB 4: Matrix population models in R and InsightMaker</td>
+<td align="left">Work in final project groups: PVA proposals</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
@@ -439,31 +514,31 @@ $(document).ready(function () {
 <tr class="even">
 <td align="left"></td>
 <td align="left">3/2/2022</td>
-<td align="left">LECTURE: Stochasticity and uncertainty (proposals due)</td>
+<td align="left">LECTURE: Stochasticity and uncertainty</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">3/4/2022</td>
-<td align="left">LAB 5: Stochasticity and uncertainty</td>
+<td align="left">LAB 5: Stochasticity and uncertainty (lab 4 due) (group assignment: PVA proposals due)</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 8</td>
 <td align="left">3/7/2022</td>
-<td align="left">MIDTERM #1</td>
+<td align="left">Review for Midterm #1</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">3/9/2022</td>
-<td align="left">LECTURE: Stochasticity and uncertainty</td>
+<td align="left">MIDTERM #1</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">3/11/2022</td>
-<td align="left">PVA projects: group meetings</td>
+<td align="left">PVA projects: group meetings (or make alternate arrangements for a group meeting time)</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
@@ -499,25 +574,25 @@ $(document).ready(function () {
 <tr class="even">
 <td align="left"></td>
 <td align="left">3/25/2022</td>
-<td align="left">Final projects (PVA models due next week)</td>
+<td align="left">Work on final projects (PVA models due next week) (lab 5 due)</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 11</td>
 <td align="left">3/28/2022</td>
-<td align="left">LECTURE: PVA!</td>
+<td align="left">LECTURE: Population Viability Analysis</td>
 <td align="left"><a href="beissinger1.pdf">Beissinger and Westphal 1998</a></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">3/30/2022</td>
-<td align="left">LECTURE: Metapopulations (PVA models due)</td>
+<td align="left">LECTURE: Metapopulations</td>
 <td align="left">Gotelli Chapter 4</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">4/1/2022</td>
-<td align="left">LAB 6: Metapopulation modeling in InsightMaker</td>
+<td align="left">LAB 6: Metapopulation modeling in InsightMaker (group assignment: PVA models due)</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
@@ -535,50 +610,50 @@ $(document).ready(function () {
 <tr class="even">
 <td align="left"></td>
 <td align="left">4/8/2022</td>
-<td align="left">LAB 7 (optional): Parameter estimation: mark-recapture data</td>
+<td align="left">LAB 7 (optional): Parameter estimation: mark-recapture data (lab 6 due)</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 13</td>
 <td align="left">4/11/2022</td>
-<td align="left">LECTURE: Species interactions: competition (peer review papers due)</td>
-<td align="left">Gotelli Chapter 5</td>
+<td align="left">Review for Midterm #2 (group assignment: peer review papers due)</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">4/13/2022</td>
-<td align="left">LECTURE: MIDTERM #2</td>
+<td align="left">MIDTERM #2</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">4/15/2022</td>
-<td align="left">LAB: Final Project Peer Review</td>
+<td align="left">LAB: Final Project Peer Review (submit peer review)</td>
 <td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left">Week 14</td>
 <td align="left">4/18/2022</td>
 <td align="left">LECTURE: Species interactions: competition</td>
-<td align="left"></td>
+<td align="left">Gotelli Chapter 5</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
 <td align="left">4/20/2022</td>
-<td align="left">LECTURE: Species interactions: predator-prey (final project: complete drafts due)</td>
-<td align="left">Gotelli Chapter 6</td>
+<td align="left">LECTURE: Species interactions: competition</td>
+<td align="left"></td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">4/22/2022</td>
-<td align="left">LAB: STUDENT PRESENTATIONS</td>
+<td align="left">LAB: STUDENT PRESENTATIONS (final project: complete drafts due)</td>
 <td align="left"></td>
 </tr>
 <tr class="odd">
 <td align="left">Week 15</td>
 <td align="left">4/25/2022</td>
-<td align="left">TBD</td>
-<td align="left"></td>
+<td align="left">LECTURE: Species interactions: predator-prey</td>
+<td align="left">Gotelli Chapter 6</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
