--- a/LAB2.html
+++ b/LAB2.html
@@ -463,7 +463,7 @@ div.tocify {
 <h2>Mathematics of Density-Dependent population regulation</h2>
 <p>Recall the basic population growth equation:</p>
 <p><span class="math inline">\(\Delta N = (b - d) \cdot N_t \qquad \text{(Eq. 1)}\)</span></p>
-<p>Previously we considered <em>b</em> and <em>d</em> and <em>r</em> to be constants.</p>
+<p>Previously we considered <em>b</em> and <em>d</em> (that is, <em>r</em>) to be constant.</p>
 <p>Now we want them to be functions of abundance! In particular, as abundance goes up, <em>b</em> goes down (becomes less favorable):</p>
 <p><span class="math inline">\(b = b_{max}-a*N_t \qquad \text{(Eq. 2)}\)</span></p>
 <p>For the death rate <em>d</em> we might expect it to go up as abundance goes up (becomes less favorable):</p>
