--- a/LAB3.html
+++ b/LAB3.html
@@ -14,8 +14,8 @@
 
 <title>Lab 3: Age-structured populations</title>
 
-<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/spacelab.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -452,7 +452,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Lab 3: Age-structured populations</h1>
 <h4 class="author">NRES 470/670</h4>
-<h4 class="date">Spring 2021</h4>
+<h4 class="date">Spring 2022</h4>
 
 </div>
 
@@ -507,28 +507,28 @@ div.tocify {
 <tbody>
 <tr class="odd">
 <td align="right">0</td>
-<td align="right">400</td>
+<td align="right">200</td>
 <td align="right">0.0</td>
 </tr>
 <tr class="even">
 <td align="right">1</td>
-<td align="right">85</td>
-<td align="right">2.1</td>
+<td align="right">55</td>
+<td align="right">1.9</td>
 </tr>
 <tr class="odd">
 <td align="right">2</td>
-<td align="right">40</td>
+<td align="right">25</td>
 <td align="right">5.8</td>
 </tr>
 <tr class="even">
 <td align="right">3</td>
-<td align="right">31</td>
-<td align="right">4.5</td>
+<td align="right">14</td>
+<td align="right">5.5</td>
 </tr>
 <tr class="odd">
 <td align="right">4</td>
 <td align="right">5</td>
-<td align="right">3.3</td>
+<td align="right">4.2</td>
 </tr>
 <tr class="even">
 <td align="right">5</td>
@@ -600,7 +600,7 @@ div.tocify {
 <ul>
 <li>Please type your responses into one Word document and submit <em>using Top Hat</em>!</li>
 </ul>
-<p><strong><em>Due March 5 at 11:55pm.</em></strong></p>
+<p><strong><em>Due Feb 18 at 11:59pm.</em></strong></p>
 <ul>
 <li>Word document with short answers
 <ul>
