--- a/LECTURE7.html
+++ b/LECTURE7.html
@@ -457,26 +457,9 @@ div.tocify {
 </div>
 
 
-<div id="upcoming-midterm-exam" class="section level3">
-<h3>Upcoming midterm exam</h3>
-<p><strong>when and where</strong> The first midterm exam (out of two) is coming up Monday <strong>March 15</strong>. You will have the whole 50 minute class period to take the exam. The exam will be online (of course) and administered on Top Hat.</p>
-<p><strong>what</strong> The exam will cover:</p>
-<ul>
-<li>All material in Chapters 1-3 of the Gotelli book <em>including matrix population modeling concepts</em>.<br />
-</li>
-<li>All material covered in lectures up to and including this lecture on matrix population models.<br />
-</li>
-<li>All material covered in labs 1-4.<br />
-</li>
-<li>Ch. 1 of “Beyond Connecting the Dots” (basic systems thinking and stock-flow modeling, concepts of feedbacks and equilibria)</li>
-<li>Basic programming concepts (IF-THEN-ELSE and iteration loops)</li>
-</ul>
-<p><em>The exam will consist of a mixture of multiple-choice and short-answer questions.</em></p>
-<p><em>Please bring a calculator- a regular scientific calculator is fine (not absolutely necessary, but it could be helpful for at least one question on the exam!)</em></p>
-</div>
 <div id="matrix-population-models" class="section level1">
 <h1>Matrix population models</h1>
-<p>First of all, this lecture is full of R code (R is pretty good at running matrix population models!). If you want to follow along in R, you can find the R script <a href="LECTURE7.R">here</a>. I recommend right-clicking on the link, saving the script to a designated folder, and loading up the script in RStudio.</p>
+<p>First of all, this lecture is full of R code (R makes it easy to run matrix population models!). If you want to follow along in R, you can find the R script <a href="LECTURE7.R">here</a>. I recommend right-clicking on the link, saving the script to a designated folder, and loading up the script in RStudio.</p>
 <div id="why-matrices" class="section level2">
 <h2>Why matrices?</h2>
 <div id="reason-1-simplify" class="section level3">
